# loglens

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  config.py  errors.py  extensions.py  logging_config.py
app/api/: health.py
app/api/v1/: __init__.py
app/api/v1/routes/: alerts.py  logs.py
app/core/: auth.py  cache.py  file_upload.py  validation.py
app/models/: __init__.py  alert_rule.py  log_entry.py
app/observability/: metrics.py
app/repositories/: alert_rule_repository.py  log_entry_repository.py
app/schemas/: log.py
app/services/: alert_notification_service.py  alert_service.py  ingestion_service.py  log_parser.py  log_query_service.py  summary_service.py  webhook_notifier.py
docker/: entrypoint.sh
migrations/: env.py  script.py.mako
migrations/versions/: c571e385bfbd_create_log_entries_and_alert_rules_.py
scripts/: seed.py
tests/: conftest.py  test_alert_webhook.py  test_alerts.py  test_auth.py  test_edge_cases.py  test_health.py  test_log_ingestion.py  test_log_query.py  test_log_summary.py  test_metrics.py  test_models.py  test_rate_limit.py  test_summary_cache.py
